# adventofcode

./: .all-contributorsrc  Cargo.toml  README.md  README.rst  rust-project.json
.github/: .all-contributorsrc
2021/Day-1/: part-1-oneline.py  part-2-oneline.py  part-2.py
2021/Day-2/: part-2-answer.txt  part-2.py
2021/Day-3/: part-1.py  part-2.py
2021/Day-5/: part-1.py  part-2.py
2021/Day-6/: part-2.py
2021/Day-7/: part-1-oneline.py  part-2.py
2021/Day-8/: part-1-oneline.py  part-2.py
2022/01/1/: .py  main  main.rs  oneline.py
2022/01/2/: .py  main  main.rs  oneline.py
2022/02/1/: .py  main.rs  oneline.py
2022/02/2/: .py  main.rs  oneline.py
2022/03/1/: .py  oneline.py
2022/03/2/: .py  oneline.py
2022/04/1/: .py  oneline.py
2022/04/2/: .py  oneline.py
2022/05/1/: .py  output.txt
2022/05/2/: .py  output.txt
Day-1/: part-1.py
Day-2/: part-1-answer.txt  part-1-oneline.py  part-1.py  part-2-oneline.py
Day-3/: part-1-oneline.py  part-2-oneline.py
Day-4/: part-1.py  part-2.py
Day-6/: part-1.py  part-2-answer.txt  part-2.py
Day-7/: part-1.py  part-2-oneline.py
Day-8/: part-1.py  part-2-answer.txt  part-2-oneline.py
